[metadata]
name = pact
version = 0.0.1
author = Jakub Wojciechowski
author_email = jakubwojciechowski@pwr.edu.pl
description = PACT is a computational pipeline for prediction of amyloid cross-interactions.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = PACT
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *

[options.packages.find]
where = PACT
